- Remove redundant loading of zlib - Tweaks to bootstrap.sh - Update admin email and test site title to include version - "Force" deletions of app components, list routes for manual deletion - use with care - do not use in production - Autorun bootstrap.sh as a task and tail logs - Fix capitalization of HASH_SALT variable - Comment out potential break point in settings.cloudgov.php

--- a/.bp-config/php/php.ini.d/extensions.ini
+++ b/.bp-config/php/php.ini.d/extensions.ini
@@ -4,6 +4,6 @@ extension=imagick
 extension=pdo_mysql
 extension=redis
 extension=sodium
-extension=zlib
+; extension=zlib
 
 zend_extension=opcache.so
