--- a/config/s3fs.settings.yml
+++ b/config/s3fs.settings.yml
@@ -4,7 +4,7 @@ credentials_file: ''
 bucket: ''
 region: us-east-1
 use_cname: false
-domain_root: none
+domain_root: public
 use_customhost: false
 hostname: ''
 domain: ''
@@ -12,14 +12,14 @@ use_path_style_endpoint: false
 disable_version_sync: false
 cache_control_header: ''
 encryption: ''
-use_https: false
+use_https: true
 ignore_cache: false
 read_only: false
 disable_cert_verify: false
 redirect_styles_ttl: 0
 root_folder: ''
-public_folder: ''
-private_folder: ''
+public_folder: public
+private_folder: private
 presigned_urls: ''
 saveas: ''
 torrents: ''
