--- a/config/system.site.yml
+++ b/config/system.site.yml
@@ -2,13 +2,13 @@ _core:
   default_config_hash: VDJxTZtQR21qB4lvOq8zszJZLvLKrSPQpdn2E3T71Ww
 langcode: en
 uuid: f047fa5b-89c8-4f6b-80de-7ea36c91cf55
-name: 'D10 on CG Test - 003'
+name: 'D10 on CG Test - 20231229.009'
 mail: pcardullo@koniag-gs.com
 slogan: 'Read from Config'
 page:
   403: ''
   404: ''
-  front: /node
+  front: /node/1
 admin_compact_mode: false
 weight_select_max: 100
 default_langcode: en
