- Remove config_split (Config Split) module - Add php_encryption library - Tweaks to file settings - Add private directory

--- a/.gitignore
+++ b/.gitignore
@@ -35,6 +35,7 @@
 # Ignore paths that contain user-generated content.
 /web/sites/*/files
 /web/sites/*/private
+!private/README.txt
 
 # Ignore SimpleTest multi-site environment.
 /web/sites/simpletest
