- Drupal updates, configuration tweaks, etc. - Add mysqli php extension for backup_migrate support - Clean up Readme - Add struture sync support for import/export of taxonomy items, menu items, and custom blocks - Add backup_migrate module - File setting/sf3fs tweaks

--- a/.bp-config/php/php.ini.d/extensions.ini
+++ b/.bp-config/php/php.ini.d/extensions.ini
@@ -4,6 +4,6 @@ extension=imagick
 extension=pdo_mysql
 extension=redis
 extension=sodium
-; extension=zlib
+extension=mysqli
 
 zend_extension=opcache.so
