--- a/config/core.extension.yml
+++ b/config/core.extension.yml
@@ -3,6 +3,7 @@ _core:
 module:
   admin_toolbar: 0
   automated_cron: 0
+  backup_migrate: 0
   big_pipe: 0
   block: 0
   block_content: 0
@@ -35,6 +36,7 @@ module:
   s3fs: 0
   search: 0
   shortcut: 0
+  structure_sync: 0
   system: 0
   taxonomy: 0
   text: 0
