--- a/config/contact.form.feedback.yml
+++ b/config/contact.form.feedback.yml
@@ -7,7 +7,7 @@ _core:
 id: feedback
 label: 'Website feedback'
 recipients:
-  - pacardullo@gmail.com
+  - katherine.jones@koniag-gs.com
 reply: ''
 weight: 0
 message: 'Your message has been sent.'
