--- a/config/system.site.yml
+++ b/config/system.site.yml
@@ -2,8 +2,8 @@ _core:
   default_config_hash: VDJxTZtQR21qB4lvOq8zszJZLvLKrSPQpdn2E3T71Ww
 langcode: en
 uuid: f047fa5b-89c8-4f6b-80de-7ea36c91cf55
-name: 'D10 on CG Test - 20240103.001'
-mail: pcardullo@koniag-gs.com
+name: 'D10 on CG Test - 20240104.002'
+mail: katherine.jones@koniag-gs.com
 slogan: 'Read from Config'
 page:
   403: ''
