- Drupal update via composer update - Add and enable redirect module

--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,7 @@
         "drupal/ctools": "^4.0",
         "drupal/paragraphs": "^1.16",
         "drupal/pathauto": "^1.12",
+        "drupal/redirect": "^1.9",
         "drupal/s3fs": "^3.4",
         "drupal/structure_sync": "^2.0",
         "drupal/uswds": "^3.0",
